--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,5 @@ quarkus.smallrye-openapi.info-license-name=Apache 2.0
 quarkus.smallrye-openapi.info-license-url=https://www.apache.org/licenses/LICENSE-2.0
 quarkus.smallrye-openapi.info-contact-email=jacopo.r00ta@gmail.com
 quarkus.smallrye-openapi.info-contact-name=r00ta
+
+quarkus.http.host = 0.0.0.0
