--- a/.github/workflows/snapcraft_build_and_publish.yml
+++ b/.github/workflows/snapcraft_build_and_publish.yml
@@ -31,6 +31,9 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml -DskipTests
 
+    - name: Init LXD
+      run: lxd init --auto
+
     - name: Build and Publish to snapstore
       run: |
         snapcraft
