--- a/.github/workflows/snapcraft_build_and_publish.yml
+++ b/.github/workflows/snapcraft_build_and_publish.yml
@@ -31,8 +31,10 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml -DskipTests
 
-    - name: Init LXD
-      run: lxd init --auto
+    - name: Setup LXD
+      uses: canonical/setup-lxd@v0.1.1
+      with:
+        channel: latest/stable
 
     - name: Build and Publish to snapstore
       run: |
